--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,4 +1,66 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@font-face {
+    font-family: 'Poppins';
+    src: url('../fonts/poppins/Poppins-Thin.ttf');
+    font-weight: 100;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'Poppins';
+    src: url('../fonts/poppins/Poppins-ExtraLight.ttf');
+    font-weight: 200;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'Poppins';
+    src: url('../fonts/poppins/Poppins-Light.ttf');
+    font-weight: 300;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'Poppins';
+    src: url('../fonts/poppins/Poppins-Regular.ttf') format('truetype');
+    font-weight: 400;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'Poppins';
+    src: url('../fonts/poppins/Poppins-Medium.ttf');
+    font-weight: 500;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'Poppins';
+    src: url('../fonts/poppins/Poppins-SemiBold.ttf');
+    font-weight: 600;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'Poppins';
+    src: url('../fonts/poppins/Poppins-Bold.ttf') format('truetype');
+    font-weight: 700;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'Poppins';
+    src: url('../fonts/poppins/Poppins-ExtraBold.ttf');
+    font-weight: 800;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'Poppins';
+    src: url('../fonts/poppins/Poppins-Black.ttf');
+    font-weight: 900;
+    font-style: normal;
+}
+
 
 body{
     font: 16px 'Poppins';
@@ -11,36 +73,6 @@ h2{
 
 h3{
     font-size: 24px;
-}
-
-header{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    width: 1fr;
-    padding: 13px 50px;
-    background-color: #515151;
-}
-
-header a{
-    color: #d9d9d9;
-    text-decoration: none;
-    font-weight: 500    ;
-}
-
-nav{
-    display: flex;
-    align-items: center;
-    gap: 20px;
-}
-
-nav a:hover{
-    color: #b77dff;
-}
-
-.icone{
-    width: 26px;
-    height: 26px;
 }
 
 /*===========PRINCIPAL===========*/
