--- a/public_html/css/style.css
+++ b/public_html/css/style.css
@@ -122,42 +122,6 @@ h3{
     background-color: #692fb1;
 }
 
-/*===========SERVIÇOS========*/
-
-.meus-servicos{
-    padding: 50px 100px;
-}
-
-.meus-servicos h2{
-    text-align: center;
-    color: #9846FF;
-}
-
-.servicos{
-    display: flex;
-    gap: 20px;
-    justify-content: center;
-}
-
-.servico{
-    max-width: 280px;
-    padding: 30px;
-    border-radius: 4px;
-    border: 1px solid #c1c1c1;
-    box-shadow: 3px 5px 4px #00000031;
-}
-
-.servico img{
-    display: block;
-    margin: auto;
-    width: 35px;
-}
-
-.servico h3{
-    font-size: 22px;
-    text-align: center;
-}
-
 /*===========MEUS PROJETOS=============*/
 
 .meus-projetos{
@@ -265,6 +229,8 @@ footer p{
     text-align: center;
 }
 
+/* NEW */
+
 .section {
     padding: 50px 100px;
 }
@@ -310,8 +276,71 @@ footer p{
     border-radius: 4px;
 }
 
+.projects {
+    display: flex;
+    gap: 20px;
+    flex-direction: column;
+    padding-top: 30px;
+    max-width: 1000px;
+    margin: auto;
+}
+
+.project {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    align-items: center;
+    gap: 30px;
+}
+
+.project-name {
+    font-size: 24px;
+    margin: 0;
+}
+
+.project-description {
+    margin: 8px 0;
+    padding: 0;
+}
+
+.project-button {
+    display: inline-block;
+    padding: 10px 20px;
+    text-decoration: none;
+    font-weight: bold;
+    background-color: var(--purple);
+    color: #ffffff;
+    border-radius: 4px;
+}
+
+.project-image {
+    width: 100%;
+    height: 256px;
+    background-color: #d9d9d9;
+}
+
+.projects-button-div {
+    display: flex;
+    justify-content: center;
+}
+
+.projects-button {
+    display: inline-block;
+    margin-top: 30px;
+    padding: 10px 20px;
+    text-decoration: none;
+    font-weight: bold;
+    background-color: #28a745;
+    color: #ffffff;
+    border-radius: 4px;
+}
+
 @media (max-width: 900px) {
     .section {
         padding: 20px 50px;
+    }
+
+    .project {
+        grid-template-columns: 1fr;
+        gap: 20px;
     }
 }
